# my-rag-chatbot

./: .flake8  CLAUDE.md  format.sh  lint.sh  pyproject.toml  quality-check.sh  query_flow_diagram.md  typecheck.sh
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: README.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_imports.py  test_rag_integration.py
backend/tests/test_data/: mock_responses.py
frontend/: index.html  script.js  style.css
